--- a/src/app-proa/pas/css/asignacion.css
+++ b/src/app-proa/pas/css/asignacion.css
@@ -154,6 +154,27 @@
     font-size: 0.95em;
 }
 
+.item-usuario span {
+    flex: 1;
+    font-weight: 500;
+}
+
+.selector-rol {
+    width: 160px;
+    margin: 0 1em;
+    padding: 0.5em;
+    border-radius: 6px;
+    border: 1px solid var(--color-bordes);
+    font-size: 1em;
+    background-color: white;
+    background-image: url("../../icons/dropdown.svg");
+    background-repeat: no-repeat;
+    background-position: right 1em center;
+    background-size: 1em;
+    appearance: none;
+}
+
+
 /* Botón de icono */
 .btn-icono {
     border: none;
