--- a/src/app-proa/css/submenu-asignatura.css
+++ b/src/app-proa/css/submenu-asignatura.css
@@ -39,10 +39,8 @@ html, body {
     display: flex;
     flex-direction: column;
     background-color: white;
-    width: 340px;
     height: 100%;
     border-radius: 5px;
-    flex-shrink: 0;
 }
 
 /* TÍTULO DEL SUBMENÚ */
@@ -171,7 +169,7 @@ html, body {
     }
 
     /* Oculta el original dentro del aside en móviles */
-    #submenu .submenu-toggle-btn:not(.submenu-toggle-btn-cabecera) {
+    body:not(.vista-pas) #submenu .submenu-toggle-btn:not(.submenu-toggle-btn-cabecera) {
         display: none;
     }
 
@@ -221,11 +219,11 @@ html, body {
     .menu.colapsable {
         position: relative;
         width: 100%;
+        justify-content: center;
     }
 
     .submenu-toggle-btn {
         display: flex;
-        justify-content: space-between;
         align-items: center;
         background-color: var(--color-primario);
         color: white;
@@ -235,6 +233,10 @@ html, body {
         cursor: pointer;
         font-size: 1rem;
         padding: 0.75em 1em;
+        width: 100%;
+        text-align: center;
+        justify-content: center;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     }
 
     .submenu-items {
