chore: menuses responsives

--- a/src/app-proa/css/inicio-asignaturas.css
+++ b/src/app-proa/css/inicio-asignaturas.css
@@ -290,6 +290,7 @@
 
 .notificacion-item {
     background-color: var(--color-panelesBlancoPuro);
+    border-radius: 4px;
     border-bottom: 1px solid var(--color-bordes);
     padding: 1em;
 }
