--- a/src/app-gti/css/contacto.css
+++ b/src/app-gti/css/contacto.css
@@ -1,3 +1,9 @@
+.contacto{
+    padding-top: 4em;
+    height: calc(100dvh - 80px);
+}
+
+
 .formulario-contacto {
     max-width: 1100px;
     margin: 0 auto;
