--- a/src/app-proa/profesor/css/crear-examen-nuevo.css
+++ b/src/app-proa/profesor/css/crear-examen-nuevo.css
@@ -16,7 +16,7 @@
     box-sizing: border-box;
     height: calc(100vh - 80px - 8em);
     overflow: auto;
-    margin: 3em 2em 0em 2em;
+    margin: 1em 2em 0 2em;
 }
 
 .input-base{
@@ -192,6 +192,10 @@
     width: 9em;
     height: 2.5em;
     padding: 0;
+}
+
+.volver-enlace {
+    margin-left: 2em;
 }
 
 @media (max-width: 1100px) {
