--- a/src/app-proa/profesor/css/crear-examen-nuevo.css
+++ b/src/app-proa/profesor/css/crear-examen-nuevo.css
@@ -206,13 +206,7 @@
 }
 
 @media (max-width: 1100px) {
-    .parametros{
-        flex-direction: column;
-    }
 
-    .parametros label{
-        align-items: flex-start;
-    }
 }
 
 @media(min-width:800px)and (max-width: 1100px){
@@ -233,13 +227,13 @@
     #botones{
         gap:0.5em
     }
-    /*.contenedor-valor-peso{
+    .contenedor-valor-peso{
         flex-direction: column;
     }
 
     .contenedor-fecha-hora{
         flex-direction: column;
-    }*/
+    }
 }
 
 @media  (min-width: 800px) and (max-width: 900px){
@@ -263,8 +257,6 @@
     #dropdown-asignaturas {
         margin-left: 0;
     }
-
-
 }
 
 @media(max-width: 796px){
@@ -292,10 +284,12 @@
         min-width: unset;
     }
 
-
+    .parametros{
+        flex-direction: column;
+    }
 }
 
-@media (max-width: 750px){
+@media (max-width: 600px){
 
     .panel-asignaturas{
         margin: 2em 1em 0em 1em;
@@ -305,7 +299,8 @@
         max-width: unset;
         width: 100%;
     }
-    .contenedor-valor-peso, .contenedor-fecha-hora{
+    .contenedor-valor-peso,
+    .contenedor-fecha-hora{
         flex-direction: row;
         gap:0.5em;
     }
@@ -320,4 +315,26 @@
     }
 }
 
+@media (max-width: 430px){
+    .contenedor-valor-peso,
+    .contenedor-fecha-hora{
+        flex-direction: column;
+        gap:0.5em;
+    }
 
+    .parametros{
+        gap: 0.5em;
+    }
+
+    .parametros label{
+        gap: 0.5em;
+    }
+
+    .parametros label input[type="time"],
+    .parametros label input[type="date"],
+    .parametros label input[type="number"]{
+        max-width: unset;
+    }
+    .input-base{
+    }
+}
