--- a/src/app-proa/profesor/css/crear-examen-nuevo.css
+++ b/src/app-proa/profesor/css/crear-examen-nuevo.css
@@ -192,6 +192,10 @@
     border: 1px solid #ccc;
 }
 
+textarea{
+    resize: none;
+}
+
 #botones{
     display: flex;
     justify-content: flex-end;
