--- a/src/app-proa/pas/css/pop-up.css
+++ b/src/app-proa/pas/css/pop-up.css
@@ -14,7 +14,7 @@
 .contenido-popup {
     display: flex;
     background: white;
-    padding: 20px;
+    padding: 1.5em;
     border-radius: 8px;
     text-align: center;
     gap: 1em;
@@ -29,4 +29,8 @@
 
 .btn-popup button{
     width: 45%;
+}
+
+#popup-volver-cancelar .parrafo-principal {
+    font-weight: 400;
 }
