--- a/src/app-proa/profesor/css/crear-examen-nuevo.css
+++ b/src/app-proa/profesor/css/crear-examen-nuevo.css
@@ -7,9 +7,9 @@
 }
 
 /*cosa rara para que funcione pero arruina todo en 797-800px*/
-/*.contenido-asignatura{
+.contenido-asignatura{
     width: 10vw;
-}*/
+}
 
 .panel-asignaturas{
     display: flex;
@@ -219,7 +219,9 @@ textarea{
 }
 
 @media (max-width: 1100px) {
-
+    .parametros{
+        flex-direction: row;
+    }
 }
 
 @media(min-width:800px)and (max-width: 1100px){
@@ -256,7 +258,6 @@ textarea{
 
     .contenedor-dropdowns{
         display: flex;
-        flex-direction: column;
         align-items: center;
         justify-self: center;
         gap: 0.75em;
@@ -272,7 +273,7 @@ textarea{
     }
 }
 
-@media(max-width: 796px){
+@media(max-width: 850px){
     .contenido-asignatura{
         width: auto;
     }
