--- a/src/app-proa/alumno/css/examenes-alumno.css
+++ b/src/app-proa/alumno/css/examenes-alumno.css
@@ -25,6 +25,11 @@
     gap: 0.25em;
 }
 
+.item-examen-calificado:hover {
+    background-color: #f0f0f0;
+    cursor: pointer;
+}
+
 .item-examen.solo-info {
     flex-direction: column;
     align-items: flex-start;
