--- a/src/app-proa/alumno/css/examenes-alumno.css
+++ b/src/app-proa/alumno/css/examenes-alumno.css
@@ -26,7 +26,8 @@
 }
 
 .item-examen-calificado:hover {
-    background-color: #f0f0f0;
+    box-shadow: 0 0 4px #CCCCCC;
+    border: 1px solid var(--color-bordes);
     cursor: pointer;
 }
 
