chore: cambios responsive día del sprint

--- a/src/app-gti/css/contacto.css
+++ b/src/app-gti/css/contacto.css
@@ -58,7 +58,21 @@
     padding: 0.8em 3em;
 }
 
+
+@media (max-width: 900px) {
+
+    .contacto {
+        height: unset;
+    }
+
+}
 @media (max-width: 768px) {
+
+    .contacto{
+        height: unset;
+    }
+
+
     .formulario-contacto {
         padding: 3em 2em;
     }
