chore: migrado a php parcialmente. Falta comprobar cositas.

--- a/src/app-gti/css/login.css
+++ b/src/app-gti/css/login.css
@@ -1,4 +1,4 @@
-/* ESTILOS USADOS EN: login.html, olvidoContrasenya.html, nuevaContrasenya.html */
+/* ESTILOS USADOS EN: login.php, olvidoContrasenya.php, nuevaContrasenya.php */
 
 /* region --- Estilos solo para página de login--- */
 .login-container.login-solo {
