--- a/src/app-gti/css/registro.css
+++ b/src/app-gti/css/registro.css
@@ -1,7 +1,7 @@
 /* region --- CSS REGISTRO--- */
 .registro {
     padding: 6em 3em;
-    height: calc(100dvh - 80px);
+    height: calc(100dvh - var(--header-height));
 }
 
 .contenedor-registro {
