--- a/src/app-gti/css/estilos.css
+++ b/src/app-gti/css/estilos.css
@@ -236,7 +236,7 @@ label {
     font-weight: 400;
     color: var(--color-blancoPuro);
     padding: 1em 1em;
-    border: none;
+    border: 2px solid var(--color-principal);
     border-radius: 10px;
     cursor: pointer;
     transition: all 0.2s ease-in-out;
@@ -259,7 +259,7 @@ label {
     font-weight: 400;
     color: var(--color-blancoPuro);
     padding: 0.65em 0.75em;
-    border: none;
+    border: 2px solid var(--color-principal);
     border-radius: 10px;
     cursor: pointer;
     transition: all 0.2s ease-in-out;
@@ -287,7 +287,7 @@ label {
 .btn-principal:hover {
     background-color: var(--color-principal) !important;
     color: var(--color-blancoPuro) !important;
-    border: none !important;
+    border: 2px solid var(--color-blancoPuro);
     filter: brightness(0.9);
 }
 /* endregion */
@@ -300,7 +300,7 @@ label {
     font-weight: 400;
     color: var(--color-blancoPuro);
     padding: 0.75em 1.75em;
-    border: none;
+    border: 2px solid var(--color-PROA);
     border-radius: 10px;
     cursor: pointer;
     transition: all 0.2s ease-in-out;
@@ -309,7 +309,6 @@ label {
 .btnCTA-PROA:active {
     transform: scale(0.98);
 }
-
 
 .btnCTA-PROA:hover {
     background-color: var(--color-blancoPuro);
@@ -324,7 +323,7 @@ label {
     font-weight: 400;
     color: var(--color-blancoPuro);
     padding: 0.75em 2em;
-    border: none;
+    border: 2px solid var(--color-PROA);
     border-radius: 10px;
     cursor: pointer;
     transition: all 0.2s ease-in-out;
